--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<log4j.version>1.2.17</log4j.version>
 		<jstl.version>1.2</jstl.version>
 		<servlet-api.version>4.0.1</servlet-api.version>
+		<mysql-connector-java.version>8.0.18</mysql-connector-java.version>
 	</properties>
 
 	<dependencies>
@@ -42,6 +43,11 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>${servlet-api.version}</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysql-connector-java.version}</version>
 		</dependency>
 	</dependencies>
 
