--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<jstl.version>1.2</jstl.version>
 		<servlet-api.version>4.0.1</servlet-api.version>
 		<mysql-connector-java.version>8.0.18</mysql-connector-java.version>
+		<commons-codec.version>1.14</commons-codec.version>
 	</properties>
 
 	<dependencies>
@@ -48,6 +49,11 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>${mysql-connector-java.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>${commons-codec.version}</version>
 		</dependency>
 	</dependencies>
 
