Add mail.properties files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,6 @@ buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
 .flattened-pom.xml
+
+# mail.properties file
+mail.properties
