--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,12 +8,18 @@
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
+	<jsp-config>
+		<taglib>
+			<taglib-uri>customtags</taglib-uri>
+			<taglib-location>/WEB-INF/tld/custom.tld</taglib-location>
+		</taglib>
+	</jsp-config>
 	<error-page>
 		<error-code>404</error-code>
-		<location>/jsp/error.jsp</location>
+		<location>/jsp/error/error404.jsp</location>
 	</error-page>
 	<error-page>
 		<error-code>500</error-code>
-		<location>/jsp/error.jsp</location>
+		<location>/jsp/error/error500.jsp</location>
 	</error-page>
 </web-app>
