--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 		<commons-codec.version>1.14</commons-codec.version>
 		<javax.mail.version>1.6.2</javax.mail.version>
 		<commons-io.version>2.6</commons-io.version>
+		<commons-lang3-version>3.9</commons-lang3-version>
 	</properties>
 
 	<dependencies>
@@ -73,6 +74,11 @@
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>${commons-io.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>${commons-lang3-version}</version>
 		</dependency>
 	</dependencies>
 
