Add description to web.xml for redirecting HTTP requests in the form of HTTPS

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -44,4 +44,15 @@
 		<error-code>500</error-code>
 		<location>/jsp/error/error500.jsp</location>
 	</error-page>
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>PaymentSystem</web-resource-name>
+			<url-pattern>/*</url-pattern>
+		</web-resource-collection>
+		<user-data-constraint>
+			<!--Specify NONE to indicate that the server must accept the constrained 
+				requests on any connection, including an unprotected one. -->
+			<transport-guarantee>CONFIDENTIAL</transport-guarantee>
+		</user-data-constraint>
+	</security-constraint>
 </web-app>
